fix forms overlapping footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,10 @@ footer {
     text-decoration: none;
 }
 
+.forms-pad {
+    padding-bottom: 2rem;
+}
+
 .contact-input {
     background: transparent;
     color: #ffffff;
